--- a/SocialMediaProfile/index.html
+++ b/SocialMediaProfile/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-    <div class="container flex w-full h-screen bg-gray-300 justify-center items-center">
-        <div class="flex justify-center items-center h-80 w-80 bg-blue-600">
+    <div class="container grid w-full h-screen bg-gray-300 place-content-center">
+        <div
+            class="flex h-64 w-72 flex-col gap-8 justify-center items-center rounded-xl bg-gradient-to-r from-gray-700 to-sky-900">
         </div>
     </div>
 </body>
