--- a/SocialMediaProfile/index.html
+++ b/SocialMediaProfile/index.html
@@ -12,6 +12,30 @@
     <div class="container grid w-full h-screen bg-gray-300 place-content-center">
         <div
             class="flex h-64 w-72 flex-col gap-8 justify-center items-center rounded-xl bg-gradient-to-r from-gray-700 to-sky-900">
+            <div class="flex gap-3">
+                <img class="h-16 w-16 rounded-full object-center object-cover" src="https://images.pexels.com/photos/14211152/pexels-photo-14211152.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="profile-image">
+                <div class="flex flex-col">
+                <p class="text-white font-semibold text-lg">Pretty Jane</p>
+                <p class="text-gray-400">@PrettyJ</p>
+                </div>
+            </div>
+            <div>
+                <p class="text-white italic">I love what I do. Simple that!</p>
+            </div>
+            <div class="flex metrics gap-6 justify-between text-center">
+                <div>
+                    <p class="text-green-500">1.3k</p>
+                    <h3 class="text-gray-300">Followers</p>
+                </div>
+                <div class="">
+                    <p class="text-green-500">1.3k</p>
+                    <p class="text-gray-300">Followers</p>
+                </div>
+                <div class="">
+                    <p class="text-green-500">1.3k</p>
+                    <p class="text-gray-300">Followers</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
